# ChangeLog for x11-libs/libva
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libva/ChangeLog,v 1.1 2010/05/11 09:16:46 aballier Exp $

*libva-0.31.0_p13 (11 May 2010)

  11 May 2010; Alexis Ballier <aballier@gentoo.org>
  +libva-0.31.0_p13.ebuild, +files/libva-dont-install-tests.patch,
  +metadata.xml:
  initial import, bug #308871, ebuild by Olivier Huber <oli.huber@gmail.com>
  with small modifications by me
